--- a/AppVersion.json
+++ b/AppVersion.json
@@ -1,7 +1,7 @@
 {
-  "isUpdate":false,
+  "isUpdate":true,
   "titlemsg":"New Version Available",
   "discriptionmsg":"Plesae,update Game to new version",
   "updateUrl":"https://play.google.com/store/apps/details?id=com.adityapromotions.worddetective",
-  "version": 1.6
+  "version": 1.7
 }
